# Sistemas-Operativos

./: README.md
ejemplos/: P6-semaforos.c
practicas/: CMakeLists.txt
practicas/Practico_1/: eje2.c  eje3.c  eje4.c  eje5.c  eje6.c  eje7.c
practicas/Practico_2/: IUA-SO-Practico-2-hilos.txt  eje-2-alt.c  eje-2.c  ht.c
practicas/Practico_3/: IUA-SO-Practico-3-archivos.txt  data.txt  eje1.c  eje2.c  eje3  eje3.c  eje4.c  eje5.c
practicas/Practico_4/: IUA-SO-Practico-4-comunicacion-1.txt  eje1.c  eje2.c  eje3.c  eje4-A.c  eje4-B.c
practicas/Practico_5/: IUA-SO-Practico-5-comunicacion-2.txt  eje1.c  eje2.c  eje3_r.c  eje3_w.c  time.txt
practicas/Practico_6/: IUA-SO-Practico-6-sincronizacion.txt  eje1.c
practicas/Practico_7/: IUA-SO-Practico-7-memoria-contigua.txt  eje1.c  generador.c  input.txt  linkedList.h
practicas/Practico_8/: IUA-SO-Practico-8-memoria-paginada.txt  p8eje1.c
