cmake_minimum_required(VERSION 3.23)
project(practicas C)

set(CMAKE_C_STANDARD 11)

add_executable(p1eje2 Practico_1/eje2.c)
add_executable(p1eje3 Practico_1/eje3.c)
add_executable(p1eje4 Practico_1/eje4.c)
add_executable(p1eje5 Practico_1/eje5.c)
add_executable(p1eje6 Practico_1/eje6.c)
add_executable(p1eje7 Practico_1/eje7.c)
add_executable(p2eje2 Practico_2/eje-2.c)
add_executable(p2eje2alt Practico_2/eje-2-alt.c)
add_executable(p2eje1 Practico_2/ht.c)
add_executable(p3eje1 Practico_3/eje1.c)
add_executable(p3eje2 Practico_3/eje2.c)
add_executable(p3eje3 Practico_3/eje3.c)
add_executable(p3eje4 Practico_3/eje4.c)
add_executable(p3eje5 Practico_3/eje5.c)
add_executable(p4eje1 Practico_4/eje1.c)
add_executable(p4eje2 Practico_4/eje2.c)
add_executable(p4eje3 Practico_4/eje3.c)
add_executable(p4eje4A Practico_4/eje4-A.c)
add_executable(p4eje4B Practico_4/eje4-B.c)
add_executable(p5eje1 Practico_5/eje1.c)
add_executable(p5eje2 Practico_5/eje2.c)
add_executable(p5eje3w Practico_5/eje3_w.c)
add_executable(p5eje3r Practico_5/eje3_r.c)
add_executable(p6eje1 Practico_6/eje1.c)
add_executable(p7eje1 Practico_7/eje1.c Practico_7/linkedList.h)
add_executable(generador Practico_7/generador.c)

